--- a/cardiac-surgery.html
+++ b/cardiac-surgery.html
@@ -94,12 +94,13 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="medical-treatment.html" class="nav-item nav-link">Medical Treatment Cost</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
+
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
             <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i
                     class="fa fa-arrow-right ms-3"></i></a>
@@ -111,24 +112,229 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Cardiac Surgery in India | Affordable & Advanced Heart Treatments | Adam Vacations Medical</h1>
-            
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Cardiac Surgery in India</h1>
+
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Feature Start -->
-    <div class="container-fluid bg-primary overflow-hidden px-lg-0" style="margin: 6rem 0;">
-        <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-              <div class="col-md-12">
+    <!-- Contact Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+                        <h1>Cardiac Surgery in India | Affordable & Advanced Heart Treatments | Adam Vacations Medical
+                        </h1>
+                        <br>
 
-              </div>
+                        <h2> Your Trusted Partner for Safe, Affordable Cardiac Surgery in India
+                        </h2>
+                        <p>
+                            <strong>Adam Vacations Medical</strong> brings you access to the <strong>best heart surgery
+                                hospitals in India</strong>,
+                            connecting international patients—especially from the USA, Canada, UK, and the Middle
+                            East—with <strong>best heart surgery hospitals in India</strong>.
+                            <br><br>
+                            If you’re searching for <strong>affordable cardiac surgery abroad</strong>, India offers
+                            <strong>internationally
+                                accredited heart hospitals, high success rates, and cost savings of up to 80%</strong> —
+                            all without
+                            compromising on medical quality or safety.
+
+                        </p>
+                        <h2>
+                            Why Choose India for Cardiac Surgery?
+                        </h2>
+                        <ul>
+                            <li>
+                                <strong>Globally Accredited Hospitals</strong> We partner with <strong>JCI</strong> and
+                                <strong>NABH-accredited multi-speciality hospitals</strong> in Delhi, Chennai,
+                                Bangalore, and Mumbai.
+                            </li>
+                            <li>
+                                <strong>Top Cardiologists & Surgeons:</strong> Surgeons trained in the <strong>U.S., UK,
+                                    and Europe</strong>, with decades
+                                of experience in <strong>open-heart, minimally invasive, and robotic heart
+                                    surgery</strong>.
+                            </li>
+                            <li>
+                                <strong>Affordable Heart Surgery Packages: Save 70% to 90% compared to prices in the
+                                    U.S., Canada, and Europe.</strong> Save 70% to 90% compared to prices in the U.S.,
+                                Canada, and Europe.
+                            </li>
+                            <li>
+                                <strong>Minimal or No Waiting Period:</strong> Immediate scheduling for urgent and
+                                elective heart procedures.
+                            </li>
+                            <li>
+                                <strong>End-to-End International Patient Support:</strong> Medical visa assistance,
+                                airport pickup,
+                                interpreter services, and post-surgery recovery stays included.
+                            </li>
+
+                        </ul>
+                        <h2>Types of Cardiac Surgery Available in India</h2>
+                        <p>Our extensive network covers all major cardiac and vascular procedures, including:</p>
+                        <ul>
+                            <li>
+                                <strong>Coronary Artery Bypass Grafting (CABG)</strong> – Both on-pump and off-pump
+                                options
+                            </li>
+                            <li>
+                                <strong>Heart Valve Replacement & Repair</strong> – Aortic, mitral, and tricuspid valves
+                            </li>
+                            <li>
+                                <strong>Minimally Invasive Cardiac Surgery (MICS)</strong> – Faster recovery and less
+                                pain
+                            </li>
+                            <li>
+                                <strong>Angioplasty and Coronary Stenting</strong> – Single and multi-vessel procedures
+                            </li>
+                            <li>
+                                <strong>Pacemaker / ICD / CRT Implantation</strong> – For arrhythmia and heart failure
+                            </li>
+                            <li>
+                                <strong> Congenital Heart Defect Correction</strong> – ASD, VSD, Tetralogy of Fallot,
+                                etc.
+                            </li>
+                            <li>
+                                <strong> Heart Transplant Coordination</strong> – In select advanced cardiac centers
+                            </li>
+
+                        </ul>
+                        <p>
+                            We ensure you receive <strong>evidence-based treatment plans</strong>, reviewed by top
+                            cardiologists and surgeons.
+                        </p>
+                        <h2>Best Cardiac Hospitals in India</h2>
+                        <p>Adam Vacations Medical is partnered with India’s top-ranked cardiac centers, such as:</p>
+                        <ul>
+                            <li>
+                                Medanta The Medicity (Gurgaon)
+                            </li>
+                            <li>
+                                Apollo Heart Institutes (Chennai, Delhi, Hyderabad)
+                            </li>
+                            <li>
+                                Fortis Escorts Heart Institute (Delhi)
+                            </li>
+                            <li>
+                                Max Super Speciality Hospital (Saket, Delhi)
+                            </li>
+                            <li>
+                                Narayana Institute of Cardiac Sciences (Bangalore)
+                            </li>
+                        </ul>
+                        <p>
+                            These hospitals are equipped with <strong>advanced cath labs, hybrid ORs, and robotic
+                                surgical
+                                systems,</strong> following the <strong>latest American and European heart surgery
+                                protocols.</strong>
+                        </p>
+                        <h2>Medical Tourism Packages for Cardiac Patients</h2>
+                        <p>We offer <strong>customized cardiac treatment packages</strong> that include:</p>
+                        <ul>
+                            <li>
+                                Initial virtual consultation with a cardiac specialist
+                            </li>
+                            <li>
+                                <strong>Second opinion service</strong> from a senior heart surgeon
+                            </li>
+                            <li>
+                                Medical visa assistance & invitation letter
+                            </li>
+                            <li>
+                                Airport pickup and personal patient coordinator
+                            </li>
+                            <li>
+                                Hospital admission, treatment, ICU and recovery
+                            </li>
+                            <li>
+                                Hotel or guesthouse stay for post-surgery recovery
+                            </li>
+                            <li>
+                                Translator & local support if needed
+                            </li>
+                        </ul>
+                        <h2>Sample Package: Coronary Bypass Surgery (CABG)</h2>
+                        <ul>
+                            <li>
+                                Total Cost: <strong>$4,500 to $6,500 USD</strong>
+                            </li>
+                            <li>
+                                Inclusions: Pre-op tests, surgery, 5-7 days hospital stay, medications, and
+                                consultation
+                            </li>
+                            <li>
+                                Compare to: <strong>$40,000 to $100,000 USD</strong> in the USA
+                            </li>
+                        </ul>
+                        <h2>Frequently Asked Questions</h2>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        Is heart surgery safe in India?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Yes. India has some of the <strong>highest success rates
+                                            in
+                                            cardiac surgery worldwide</strong>, often exceeding <strong>international
+                                            benchmarks</strong>, with
+                                        thousands of successful surgeries performed each year.</div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <h2>How long is recovery after heart surgery?</h2>
+                        <ul>
+                            <li>
+                                Hospital Stay: 5 to 7 days
+                            </li>
+                            <li>
+                                Hotel Stay (optional): 7 to 10 days post-discharge
+                            </li>
+                            <li>
+                                Most patients can travel home in <strong>2 to 3 weeks</strong> after surgery
+                            </li>
+                        </ul>
+                        <h2>What documents are needed to travel for surgery?</h2>
+                        <ul>
+                            <li>
+                                Valid passport
+                            </li>
+                            <li>
+                                Medical reports and prescriptions
+                            </li>
+                            <li>
+                                Visa invitation letter (we provide this)
+                            </li>
+                        </ul>
+                        <h2>Can I bring a family member?</h2>
+                        <p>Yes. Attendant visa, accommodation, and even hospital guest meals can be arranged.</p>
+                        <h2>Start Your Heart Care Journey Today</h2>
+                        <p>Adam Vacations Medical is committed to helping you regain your health with dignity,
+                            compassion, and world-class care.</p>
+                            <strong>Contact us now for a free treatment plan or second opinion.</strong>
+                            <ul>
+                                <li>Email: medical@adamvacations.com</li>
+                                <li>USA Toll-Free: +1 855 888 0114</li>
+                            </ul>
+                            <strong>Website: medical.adamvacations.com/cardiac-surgery</strong>
+
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Feature End -->
+    <!-- Contact End -->
 
 
     <!-- Footer Start -->
@@ -137,8 +343,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Unit 16A, 16B / 17A Ground Floor, Tower B3,
-                        Spaze Itech Park, Sector 49, Gurugram, Haryana 122018, India</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>7901 4TH ST N STE 300, ST PETERSBURG, FL
+                        33702</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+1 855 888 0114</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
                     <div class="d-flex pt-2">
