--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                         <form id="appointmentForm" class="needs-validation" novalidate>
                             <div class="row g-3">
                                 <!-- Name -->
-                                <div class="col-12">
+                                <div class="col-12 col-sm-6">
                                     <input type="text" class="form-control border-0" id="name" name="name"
                                         placeholder="Your Name" style="height: 55px;" required minlength="2"
                                         maxlength="100">
@@ -505,6 +505,23 @@
                                         Please enter your name (minimum 2 characters)
                                     </div>
                                 </div>
+
+<!-- Nationality -->
+<div class="col-12 col-sm-6">
+    <select class="form-control border-0" id="nationality" name="nationality"
+        style="height: 55px;" required>
+        <option value="">Select your nationality</option>
+        <option value="American">American</option>
+        <option value="British">British</option>
+        <option value="Canadian">Canadian</option>
+        <option value="Emirati">Emirati</option>
+        <option value="Indian">Indian</option>
+        <option value="Spanish">Spanish</option>
+    </select>
+    <div class="invalid-feedback">
+        Please select your nationality
+    </div>
+</div>
 
                                 <!-- Email -->
                                 <div class="col-12 col-sm-6">
@@ -747,6 +764,7 @@
                 break;
             case "appointmentDate":
             case "appointmentTime":
+            case "nationality":
                 isValid = field.value.trim() !== "";
                 break;
             case "description":
@@ -767,7 +785,7 @@
             function updateSubmitButton() {
                 let allValid = true;
 
-                ["name", "email", "phone", "appointmentDate", "appointmentTime", "description"].forEach(id => {
+                ["name","nationality", "email", "phone", "appointmentDate", "appointmentTime", "description"].forEach(id => {
                     const field = document.getElementById(id);
                     if (!field) return;
 
@@ -784,7 +802,7 @@
             }
 
             // Attach listeners to all fields
-            const fields = ["name", "email", "phone", "appointmentDate", "appointmentTime", "description"];
+            const fields = ["name", "nationality", "email", "phone", "appointmentDate", "appointmentTime", "description"];
             fields.forEach(id => {
                 const el = document.getElementById(id);
                 if (el) {
@@ -819,6 +837,7 @@
         // Collect sanitized data
         const formData = {
             fullName: document.getElementById("name").value.trim(),
+            nationality: document.getElementById("nationality").value.trim(),
             email: document.getElementById("email").value.trim().toLowerCase(),
             phone: phoneInput.getNumber(), // Full international number e.g. +919876543210
             appointmentDate: document.getElementById("appointmentDate").value.trim(),
@@ -829,7 +848,7 @@
                 console.log("Form data ", formData)
 
         try {
-            const response = await fetch("/api/MedicalEnquiry", {  // ← Change to your actual endpoint
+            const response = await fetch("https://localhost:32769/api/MedicalEnquiry", {  // ← Change to your actual endpoint
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
