--- a/appointment.html
+++ b/appointment.html
@@ -51,11 +51,11 @@
 
 
     <!-- Navbar Start -->
-   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img/logo.png" style="width:150px;">
         </a>
-         <div class="phone-header-mobile">
+        <div class="phone-header-mobile">
             <a href="tel:1-855-888-0114"><i class="fa fa-phone"></i></a>
         </div>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -65,7 +65,19 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About Us</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
+                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
+                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
+                        <a href="#" class="dropdown-item">Medicine Service</a>
+                        <a href="#" class="dropdown-item">Accommodation Service</a>
+                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="#" class="dropdown-item">Flight Booking</a>
+                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+
+                    </div>
+                </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
@@ -192,7 +204,7 @@
 
 
 <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+      <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -211,9 +223,10 @@
                     <h5 class="text-light mb-4">Services <br>
                         <hr>
                     </h5>
-                    <a class="btn btn-link" href="cardiac-surgery.html">Cardiac Surgery</a>
+                    <a class="btn btn-link size-txt-1" href="service.html">Services</a>
                     <a class="btn btn-link size-txt-1" href="medical-treatment.html">Medical Treatment Cost</a>
                     <a class="btn btn-link size-txt-1" href="refund-policy.html">Refund & Cancellation Policy</a>
+
 
                 </div>
 
