--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -84,7 +84,19 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About Us</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
+                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
+                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
+                        <a href="#" class="dropdown-item">Medicine Service</a>
+                        <a href="#" class="dropdown-item">Accommodation Service</a>
+                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="#" class="dropdown-item">Flight Booking</a>
+                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+
+                    </div>
+                </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
@@ -387,9 +399,10 @@
                     <h5 class="text-light mb-4">Services <br>
                         <hr>
                     </h5>
-                    <a class="btn btn-link" href="cardiac-surgery.html">Cardiac Surgery</a>
+                    <a class="btn btn-link size-txt-1" href="service.html">Services</a>
                     <a class="btn btn-link size-txt-1" href="medical-treatment.html">Medical Treatment Cost</a>
                     <a class="btn btn-link size-txt-1" href="refund-policy.html">Refund & Cancellation Policy</a>
+
 
                 </div>
 
