--- a/air-ambulance-service.html
+++ b/air-ambulance-service.html
@@ -271,7 +271,7 @@
 
                             </div>
                             <div class="col-lg-4">
-                                <img src="img/air-banner-1.png" class="rounded-circle">
+                                <img src="img/air-banner-1.png" class="rounded-circle img-fluid">
                             </div>
                         </div>
 
