--- a/cardiac-surgery.html
+++ b/cardiac-surgery.html
@@ -84,7 +84,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                      <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
                         <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
                         <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
                         <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
@@ -182,39 +182,70 @@
                             </li>
 
                         </ul>
-                        <h2>Types of Cardiac Surgery Available in India</h2>
-                        <p>Our extensive network covers all major cardiac and vascular procedures, including:</p>
-                        <ul>
-                            <li>
-                                <strong>Coronary Artery Bypass Grafting (CABG)</strong> – Both on-pump and off-pump
-                                options
-                            </li>
-                            <li>
-                                <strong>Heart Valve Replacement & Repair</strong> – Aortic, mitral, and tricuspid valves
-                            </li>
-                            <li>
-                                <strong>Minimally Invasive Cardiac Surgery (MICS)</strong> – Faster recovery and less
-                                pain
-                            </li>
-                            <li>
-                                <strong>Angioplasty and Coronary Stenting</strong> – Single and multi-vessel procedures
-                            </li>
-                            <li>
-                                <strong>Pacemaker / ICD / CRT Implantation</strong> – For arrhythmia and heart failure
-                            </li>
-                            <li>
-                                <strong> Congenital Heart Defect Correction</strong> – ASD, VSD, Tetralogy of Fallot,
-                                etc.
-                            </li>
-                            <li>
-                                <strong> Heart Transplant Coordination</strong> – In select advanced cardiac centers
-                            </li>
 
-                        </ul>
-                        <p>
-                            We ensure you receive <strong>evidence-based treatment plans</strong>, reviewed by top
-                            cardiologists and surgeons.
-                        </p>
+
+                        <div class="row mt-5">
+                            <div class="col-md-6">
+                                <h2>Types of Cardiac Surgery Available in India</h2>
+                                <p>Our extensive network covers all major cardiac and vascular procedures, including:
+                                </p>
+                                <ul>
+                                    <li>
+                                        <strong>Coronary Artery Bypass Grafting (CABG)</strong> – Both on-pump and
+                                        off-pump
+                                        options
+                                    </li>
+                                    <li>
+                                        <strong>Heart Valve Replacement & Repair</strong> – Aortic, mitral, and
+                                        tricuspid valves
+                                    </li>
+                                    <li>
+                                        <strong>Minimally Invasive Cardiac Surgery (MICS)</strong> – Faster recovery and
+                                        less
+                                        pain
+                                    </li>
+                                    <li>
+                                        <strong>Angioplasty and Coronary Stenting</strong> – Single and multi-vessel
+                                        procedures
+                                    </li>
+                                    <li>
+                                        <strong>Pacemaker / ICD / CRT Implantation</strong> – For arrhythmia and heart
+                                        failure
+                                    </li>
+                                    <li>
+                                        <strong> Congenital Heart Defect Correction</strong> – ASD, VSD, Tetralogy of
+                                        Fallot,
+                                        etc.
+                                    </li>
+                                    <li>
+                                        <strong> Heart Transplant Coordination</strong> – In select advanced cardiac
+                                        centers
+                                    </li>
+
+                                </ul>
+                                <p>
+                                    We ensure you receive <strong>evidence-based treatment plans</strong>, reviewed by
+                                    top
+                                    cardiologists and surgeons.
+                                </p>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="/img/about-1.png">
+                            </div>
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
                         <h2>Best Cardiac Hospitals in India</h2>
                         <p>Adam Vacations Medical is partnered with India’s top-ranked cardiac centers, such as:</p>
                         <ul>
